# Universal-Field-Editor-DATAVERSE

./: .env.example  .gitignore  All_Sheets.xlsx  Citation_Fields_V1.csv  Citation_Fields_V1.xlsx  README.md  SocialSciences_Fields_V1.csv  SocialSciences_Fields_V1.xlsx  pyproject.toml  requirements.txt  test_universal_field_editor_V2.py  testing_README.md  universal_field_editing_script.py  universal_field_editor_V1.py  universal_field_editor_V2.py  universal_field_editor_v3.py  universal_field_editor_v4.py  universal_field_editor_v5.py  universal_field_editor_v6.1.py  universal_field_editor_v6.2.py  universal_field_editor_v6.3.py  universal_field_editor_v6.py
Advanced-Shell-Instructions/: README.md  pyproject.toml
Advanced-Shell-Instructions/Tests/: __init__.py
CSV_Excel_Sheets/: Citation Fields CSV - 3D Objects.csv  Citation Fields CSV - Astronomy and Astrophysics.csv  Citation Fields CSV - Citation.csv  Citation Fields CSV - Computational Workflow.csv  Citation Fields CSV - Geospatial.csv  Citation Fields CSV - Journal.csv  Citation Fields CSV - Life Sciences.csv  Citation Fields CSV - Social Science and Humanities.csv  Citation Fields CSV - Terms of Use.csv  Citation Fields CSV.xlsx  Citation Fields XLSX.xlsx  README.md
tests/: README.md  conftest.py  pytest.ini  test_fixtures.py
